# budgie-wayland-session

./: CMakeLists.txt  README.md
desktop/: CMakeLists.txt  budgie-desktop-kwinwayland.desktop  budgie-desktop-kwinxwayland.desktop  budgie-desktop-labwc.desktop  budgie-desktop-magpiev1.desktop  budgie-desktop-wayland.desktop  budgie-desktop-xwayland.desktop
desktop/miriway/: CMakeLists.txt  budgie-desktop-miriway.desktop  budgie-miriway-wrapper.in  miriway-shell.config
initial-setup/: CMakeLists.txt  run-gui-backend
sddm/: CMakeLists.txt  magpie-wm.conf
